--- a/application_code/templates/about.html
+++ b/application_code/templates/about.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<title>Hello from Flask</title>
-<body style="background: {{ color }};"></body>
+<title>Hello from {{ group }}!</title>
+<body style="background-image: url('{{ image }}'); background-size: contain;"></body>
 <div style="color: #e4e4e4;
     text-align:  center;
     height: 90px;
     vertical-align:  middle;">
-{% if name %}
-  <h1>Hello from {{ name }}!</h1>
+{% if group %}
+  <h1>Hello from {{ group }}!</h1>
 {% else %}
   <h1>Hello From CLO835!</h1>
 {% endif %}
